# ble-smart-lock-hardware

./: .gitmodules  Ble Smart Lock-1.1-ibom.html  Ble_Smart_Lock_1.0-ibom.html  LICENSE  README.md
BleSmartLock/: .gitignore  BleSmartLock.kicad_pcb  BleSmartLock.kicad_prl  README.md
Firmware/: BleSmartLock-firmware.code-workspace  CMakeLists.txt  README.md
Firmware/cmake/: arm-none-eabi-gcc.cmake
Firmware/release/: ble_smart_lock_M2SA_1.0.0.hex  ble_smart_lock_M2SP_1.0.0.hex
Firmware/src/: CMakeLists.txt
Firmware/src/app/: CMakeLists.txt  FreeRTOSConfig.h  ble_config.h  main.c  syscall.c  vt100.h
Firmware/src/app/tasks/: tasks.c  tasks.h
Firmware/src/app/tasks/taskApp/: taskApp.c  taskApp.h
Firmware/src/app/tasks/taskBle/: bleConfig.h  bleEvents.c  taskBle.c  taskBle.h
Firmware/src/app/tasks/taskLight/: taskLight.c  taskLight.h
Firmware/src/app/tasks/taskTerm/: taskTerm.c  taskTerm.h
Firmware/src/board/: CMakeLists.txt  FreeRTOSConfig.h  adc.c  adc.h  bluenrg_it.c  board.c  board.h  freertos_tasks_c_additions.h  itConfig.h  mapHard.h  map_hard.h  pwm.c  pwm.h  tick.c  tick.h  uart.c
Firmware/src/board/drivers/: adc.c  adc.h  pwm.c  pwm.h  uart.c  uart.h
Firmware/src/board/linker/: BlueNRG2.ld
Firmware/src/device/: BlueNRG1_conf.h  CMakeLists.txt
Firmware/src/middleware/: CMakeLists.txt
Firmware/src/middleware/tools/: fifo.h
Firmware/tools/: make_release.sh
Firmware/tools/gdb/: gdb_target.cfg  gdbinit_debug.cfg  gdbinit_debug.cfg.in  gdbinit_load.cfg.in
Firmware/tools/openocd/: bluenrg-2.cfg
Hardware/: README.md
Hardware/BleSmartLock/: BleSmartLock.kicad_pcb  BleSmartLock.kicad_prl  BleSmartLock.kicad_pro  BleSmartLock.kicad_sch  BleSmartLock_Bluenrg.kicad_sch  BleSmartLock_InOut.kicad_sch  BleSmartLock_Power.kicad_sch  README.md  fp-info-cache
Hardware/BleSmartLock/Board/: .gitignore  BleSmartLock.kicad_prl  BleSmartLock.kicad_pro  BleSmartLock.kicad_sch  BleSmartLock_Bluenrg.kicad_sch  BleSmartLock_InOut.kicad_sch  BleSmartLock_Power.kicad_sch
Hardware/BleSmartLock/Firmware/: CMakeLists.txt  README.md
Hardware/BleSmartLock/Firmware/cmake/: arm-none-eabi-gcc.cmake
Hardware/BleSmartLock/Firmware/src/app/: ble_events.c  main.c  syscall.c
Hardware/BleSmartLock/Firmware/src/board/: CMakeLists.txt  bluenrg_it.c  board.c  board.h  fifo.c  map_hard.h  tick.c  tick.h  uart.c  uart.h
Hardware/BleSmartLock/Firmware/src/device/: .gitignore  CMakeLists.txt
Hardware/BleSmartLock/Firmware/tools/: gdb_target.cfg
Hardware/BleSmartLock/Firmware/tools/gdb/: gdbinit_debug.cfg  gdbinit_load.cfg
Hardware/BleSmartLock/Firmware/tools/openocd/: bluenrg-2.cfg
Hardware/LightSensor/: LightSensor.kicad_pcb  LightSensor.kicad_prl  LightSensor.kicad_pro  LightSensor.kicad_sch  README.md  fp-info-cache
LightSensor/: LightSensor.kicad_prl  README.md
